--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "antd": "^5.2.2",
     "classnames": "^2.3.2",
     "echarts-for-react": "^3.0.2",
+    "file-saver": "^2.0.5",
     "github-markdown-css": "^5.8.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -64,7 +65,8 @@
     "react": "^18.2.0",
     "react-dev-inspector": "^1.8.4",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0"
+    "react-helmet-async": "^1.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.1.5",
